<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.Login">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/keep_earning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_keep_earning"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fidle_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Not_registered"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgot_password"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="200dp"/>

    <ImageView
        android:id="@+id/fidle_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fidle_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginVertical="60dp"
        android:contentDescription="@string/todo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:prefixText="Username"
        app:layout_constraintLeft_toLeftOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/keep_earning"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:text="@string/enter_username"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/end"


</androidx.constraintlayout.widget.ConstraintLayout>