<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/signUpFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vicksoson.fidleclone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.vicksoson.fidleclone.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.vicksoson.fidleclone.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.vicksoson.fidleclone.ui.auth.SignUp"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.vicksoson.fidleclone.ui.auth.Login"
        android:label="Login"
        tools:layout="@layout/fragment_login" />
</navigation>